AC-268 Need to synchronize users with LDAP fix Review

--- a/app/config/ldap.yml
+++ b/app/config/ldap.yml
@@ -1,22 +1,17 @@
+parameters:
+    ldap:
+        default_user_roles: ROLE_ADMIN
+
 fr3d_ldap:
     driver:
-        host:                nova.office.dev
-#       port:                389
-        username:            uid=araneum,cn=sysaccounts,cn=etc,dc=office,dc=dev
-        password:            LK8SoeTbffxFLDu5nOpY
-        bindRequiresDn:      true   # Optional
-#       baseDn:              ou=users, dc=host, dc=foo
+        host:                %ldap_driver_host%
+        username:            %ldap_driver_username%
+        password:            %ldap_driver_password%
+        bindRequiresDn:      true
         accountFilterFormat: (&(uid=%s))
-#       optReferrals:        false
-#       useSsl:              true
-#       useStartTls:         true
-#       accountCanonicalForm: 3
-#       accountDomainName: HOST
-#       accountDomainNameShort: HOST
     user:
-        baseDn: cn=accounts,dc=office,dc=dev
+        baseDn: %ldap_user_baseDn%
         filter: (&(objectclass=Person))
-#        usernameAttribute: uid # Optional
         attributes:
            - { ldap_attr: uid,  user_method: setUsername }
            - { ldap_attr: displayname,   user_method: setFullName }
@@ -24,18 +19,23 @@ fr3d_ldap:
            - { ldap_attr: mail,   user_method: setEmailCanonical }
            - { ldap_attr: krblastpwdchange,   user_method: setLastChangeLdapPass }
     service:
-        #user_manager: api.ldap.user_manager
-        ldap_manager: api.ldap.ldap_manager # fr3d_ldap.ldap_manager.default
-
-parameters:
-    ldap:
-        default_user_roles: ROLE_ADMIN
+        ldap_manager: api.ldap.ldap_manager
 
 services:
     api.ldap.ldap_manager:
         class: Araneum\Bundle\MainBundle\Service\Ldap\LdapUseManager
-        arguments: ["@service_container", "@security.encoder_factory", "@fr3d_ldap.ldap_driver", "@fr3d_ldap.user_manager", %fr3d_ldap.ldap_manager.parameters%]
+        arguments:
+           - "@service_container"
+           - "@security.encoder_factory"
+           - "@fr3d_ldap.ldap_driver"
+           - "@fr3d_ldap.user_manager"
+           - %fr3d_ldap.ldap_manager.parameters%
 
     api.ldap.synchronization:
         class: Araneum\Bundle\MainBundle\Service\LdapSynchronizationService
-        arguments: ["@service_container", "@security.encoder_factory", "@fr3d_ldap.ldap_driver", "@fr3d_ldap.user_manager", %fr3d_ldap.ldap_manager.parameters%]
+        arguments:
+           - "@service_container"
+           - "@security.encoder_factory"
+           - "@fr3d_ldap.ldap_driver"
+           - "@fr3d_ldap.user_manager"
+           - %fr3d_ldap.ldap_manager.parameters%
