--- a/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
+++ b/src/Araneum/Bundle/MainBundle/Resources/menu/left.yml
@@ -18,7 +18,7 @@ Site_Manager:
     submenu:
         Cluster:
             text: Cluster
-            sref: app.table-standard
+            sref: app.clusters
             icon: icon-grid
             translate: admin.sidebar.nav.manager.CLUSTER
         Applications:
