AC-331 Mail Admin page. Ready to integrate SHOW action

--- a/app/config/routing_manage.yml
+++ b/app/config/routing_manage.yml
@@ -25,3 +25,7 @@ araneum_manage_logout:
 araneum_user:
     resource: "@AraneumUserBundle/Controller"
     type: annotation
+
+araneum_manage_mail:
+    resource: "@AraneumMailBundle/Controller/AdminMailController.php"
+    type: annotation
