AC-150 Customize error pages. Add Multilanguage custom ExceptionHendler

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -44,6 +44,7 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         locales: %locales%
+    exception_controller: araneum.exception_controller:showAction
 
 # Assetic Configuration
 assetic:
