--- a/src/Araneum/Base/Resources/config/services.yml
+++ b/src/Araneum/Base/Resources/config/services.yml
@@ -111,3 +111,15 @@ services:
     araneum.base.rabbitmq.consumer.application_customer:
         class: Araneum\Base\Service\RabbitMQ\ApiCustomerConsumerService
         arguments: ["@araneum.base.application_api", "@araneum.base.rabbitmq.msg_convert_helper", "@doctrine.orm.entity_manager"]
+
+
+    araneum.base.rabbitmq.producer.factory_service:
+        class: Araneum\Base\Service\ProducerFactory
+        arguments:
+            - "@service_container"
+            - "@araneum.base.rabbitmq.msg_convert_helper"
+            - "%rabbitmq_queue_expiration%"
+
+    araneum.base.rabbitmq.producer.new_service:
+        class: Araneum\Base\Service\RabbitMQ\ProducerService
+        factory: ["@araneum.base.rabbitmq.producer.factory_service", createProducer]
