--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: ../../src/Araneum/Base/Resources/config/services.yml }
+    - { resource: rabbitmq.queue.yml }
     - { resource: daemons.yml }
     - { resource: ldap.yml }
 
