--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -18,107 +18,109 @@
     "**/.*"
   ],
   "dependencies": {
-    "Flot": "flot/flot#0.8.3",
-    "angular-loading-bar": "0.7.0",
-    "angular-translate": "2.6.0",
-    "angular-ui-router": "0.2.13",
+    "ag-grid": "2.3.7",
+    "animate.css": "3.5.1",
+    "animo.js": "ThrivingKings/animo.js#1.0.3",
     "angular": "1.4.8",
-    "angular-i18n": "1.4.2",
-    "angular-bootstrap": "0.12.1",
-    "angular-cookies": "1.4.2",
-    "angular-translate-loader-url": "2.6.0",
-    "angular-translate-loader-static-files": "2.6.0",
-    "angular-translate-storage-local": "2.6.0",
-    "angular-translate-storage-cookie": "2.6.0",
-    "angular-ui-utils": "0.2.2",
-    "angularjs-toaster": "0.4.18",
-    "flatdoc": "0.9.0",
-    "fontawesome": "4.3.0",
-    "oclazyload": "0.6.3",
-    "screenfull": "2.0.0",
-    "slimScroll": "1.3.3",
-    "weather-icons": "1.3.2",
-    "moment": "2.9.0",
-    "chosen_v1.2.0": "https://github.com/harvesthq/chosen/releases/download/v1.2.0/chosen_v1.2.0.zip",
-    "flot-spline": "*",
-    "flot.tooltip": "0.8.4",
-    "ngstorage": "0.3.0",
-    "jquery-ui": "1.11.3",
-    "jqueryui-touch-punch": "*",
-    "seiyria-bootstrap-slider": "3.1.0",
-    "jquery.inputmask": "3.1.61",
-    "bootstrap-wysiwyg": "*",
-    "ika.jvectormap": "*",
-    "jquery": "2.1.3",
-    "fullcalendar": "2.2.7",
-    "animate.css": "3.2.1",
-    "fastclick": "1.0.6",
-    "modernizr": "2.8.3",
-    "animo.js": "ThrivingKings/animo.js#1.0.2",
-    "jquery-classyloader": "http://vox.space/files/jquery-classyloader.zip",
-    "whirl": "1.0.0",
-    "skycons": "darkskyapp/skycons",
-    "ngDialog": "0.3.11",
-    "codemirror": "5.0.0",
-    "marked": "0.3.3",
-    "bootstrap-tagsinput": "0.4.2",
-    "ngWig": "stevermeister/ngWig#0.8.5",
-    "bootstrap-filestyle": "1.1.2",
-    "parsleyjs": "2.0.7",
-    "angular-datatables": "0.4.3",
-    "angular-sanitize": "1.4.2",
-    "angular-resource": "1.4.2",
-    "angular-chosen-localytics": "1.0.6",
-    "ng-table": "0.5.1",
-    "ng-table-export": "*",
-    "simple-line-icons": "0.1.1",
-    "angular-bootstrap-nav-tree": "*",
-    "nestable": "*",
-    "html.sortable": "0.1.8",
-    "angular-xeditable": "0.1.8",
-    "angular-file-upload": "1.1.5",
-    "ng-img-crop": "0.3.2",
-    "angular-ui-select": "0.9.6",
-    "angular-ui-codemirror": "0.2.2",
-    "angular-carousel": "0.3.10",
-    "angular-touch": "1.4.2",
-    "angular-dynamic-locale": "0.1.27",
-    "ng-grid": "2.0.14",
-    "ngInfiniteScroll": "1.2.0",
-    "Chart.js": "1.0.1",
-    "angular-bootstrap-slider": "0.1.1",
-    "angular-ui-grid": "3.0.0-rc.20",
-    "textAngular": "1.4.1",
-    "angular-rickshaw": "master",
-    "morris.js": "0.5.1",
-    "angular-chartist.js": "master",
-    "angular-ui-map": "0.5.0",
-    "loaders.css": "0.1.1",
-    "spinkit": "1.0.1",
-    "angular-jqcloud": "1.0.1",
-    "ag-grid": "1.7.0",
-    "ng-nestable": "0.0.1",
-    "angular-deckgrid": "0.5.0",
-    "angular-sweetalert": "1.1.0",
-    "angular-bootstrap-tour": "0.3.2",
-    "jquery.browser": "master",
-    "angular-knob": "~0.0.2",
-    "jquery.easy-pie-chart": "~2.1.6",
+    "angular-animate": "1.4.8",
+    "angular-bootstrap": "1.0.3",
     "angular-bootstrap-colorpicker": "~3.0.18",
+    "angular-bootstrap-nav-tree": "*",
+    "angular-bootstrap-slider": "0.1.21",
+    "angular-bootstrap-tour": "0.3.3",
+    "angular-carousel": "1.0.1",
+    "angular-chartist.js": "master",
+    "angular-chosen-localytics": "1.0.7",
+    "angular-cookies": "1.4.8",
+    "angular-datatables": "0.5.2",
+    "angular-deckgrid": "0.5.0",
+    "angular-dynamic-locale": "0.1.29",
+    "angular-file-upload": "2.2.0",
+    "angular-i18n": "1.4.8",
+    "angular-jqcloud": "1.0.2",
+    "angular-knob": "~0.0.2",
+    "angular-loading-bar": "0.8.0",
+    "angular-route": "1.4.8",
+    "angular-touch": "1.4.8",
+    "angular-translate": "2.8.1",
+    "angular-translate-loader-url": "2.8.1",
+    "angular-translate-loader-static-files": "2.8.1",
+    "angular-translate-storage-cookie": "2.8.1",
+    "angular-translate-storage-local": "2.8.1",
+    "angular-resource": "1.4.8",
+    "angular-rickshaw": "master",
+    "angular-sanitize": "1.4.8",
+    "angular-sweetalert": "1.1.0",
+    "angular-ui-codemirror": "0.3.0",
+    "angular-ui-grid": "3.0.7",
+    "angular-ui-map": "0.5.0",
+    "angular-ui-router": "0.2.15",
+    "angular-ui-select": "0.13.2",
+    "angular-ui-utils": "0.2.2",
+    "angular-xeditable": "0.1.9",
+    "angularjs-toaster": "0.4.181",
+    "bootstrap-filestyle": "1.2.1",
+    "bootstrap-tagsinput": "0.7.1",
+    "bootstrap-wysiwyg": "*",
+    "Chart.js": "1.0.2",
+    "chosen_v1.2.0": "https://github.com/harvesthq/chosen/releases/download/v1.2.0/chosen_v1.2.0.zip",
+    "codemirror": "5.10.0",
+    "fastclick": "1.0.6",
+    "flatdoc": "0.9.0",
+    "Flot": "flot/flot#0.8.3",
+    "flot-spline": "*",
+    "flot.tooltip": "0.8.5",
+    "fontawesome": "4.5.0",
+    "fullcalendar": "2.6.0",
+    "html.sortable": "0.3.1",
+    "ika.jvectormap": "*",
+    "jquery": "2.2.0",
+    "jquery.easy-pie-chart": "~2.1.6",
+    "jquery.browser": "master",
+    "jquery.inputmask": "3.2.5",
+    "jquery-classyloader": "http://vox.space/files/jquery-classyloader.zip",
+    "jquery-ui": "1.11.4",
     "jquery-validation": "~1.14.0",
-    "angular-animate": "1.4.3",
-    "AngularJS-Toaster": "angularjs-toaster#~0.4.181"
+    "jqueryui-touch-punch": "*",
+    "loaders.css": "0.1.2",
+    "marked": "0.3.5",
+    "modernizr": "2.8.3",
+    "moment": "2.11.1",
+    "morris.js": "0.5.1",
+    "nestable": "*",
+    "ng-grid": "3.0.7",
+    "ng-img-crop": "0.3.2",
+    "ng-nestable": "0.0.1",
+    "ng-table": "0.8.3",
+    "ng-table-export": "*",
+    "ngDialog": "0.5.6",
+    "ngInfiniteScroll": "1.2.1",
+    "ngWig": "stevermeister/ngWig#2.3.3",
+    "ngstorage": "0.3.10",
+    "oclazyload": "1.0.9",
+    "parsleyjs": "2.1.3",
+    "screenfull": "3.0.0",
+    "seiyria-bootstrap-slider": "3.1.0",
+    "simple-line-icons": "2.2.3",
+    "skycons": "darkskyapp/skycons",
+    "slimScroll": "1.3.7",
+    "spinkit": "1.2.5",
+    "textAngular": "1.4.1",
+    "weather-icons": "2.0.10",
+    "whirl": "1.0.0",
+    "crud": "ssh://git@stash.office.dev:7999/af/crud.git#master",
+    "user": "ssh://git@stash.office.dev:7999/af/user.git"
   },
   "resolutions": {
-    "jquery-ui": "1.11.3",
-    "jquery": "2.1.3",
-    "angular": "1.4.2",
-    "angular-cookies": "1.4.2",
-    "angular-translate": "2.6.0",
-    "angular-translate-storage-cookie": "2.6.0",
+    "angular": "1.4.8",
+    "angular-cookies": "1.4.8",
+    "angular-route": "1.4.8",
+    "angular-translate": "2.8.1",
+    "angular-translate-storage-cookie": "2.8.1",
+    "jquery": "2.2.0",
+    "jquery-ui": "1.11.4",
     "moment": "2.9.0",
     "seiyria-bootstrap-slider": "3.1.0",
-    "codemirror": "5.0.0",
-    "angular-route": "1.4.3"
+    "codemirror": "5.10.0"
   }
 }
