--- a/app/config/rabbitmq.queue.yml
+++ b/app/config/rabbitmq.queue.yml
@@ -1,33 +1,32 @@
 services:
 
+    araneum.base.rabbitmq.producer.base_producer:
+        class: Araneum\Base\Service\ProducerFactory
+
     araneum.base.rabbitmq.producer.spot:
         class: Araneum\Base\Service\RabbitMQ\ProducerService
-        factory_class: Araneum\Base\Service\ProducerFactory
-        factory_method: createService
+        factory: ["@araneum.base.rabbitmq.producer.base_producer", createService]
         arguments:
             - "@old_sound_rabbit_mq.spot_producer"
             - "%rabbitmq_queue_expiration%"
 
     araneum.base.rabbitmq.producer.spot_customer:
         class: Araneum\Base\Service\RabbitMQ\ProducerService
-        factory_class: Araneum\Base\Service\ProducerFactory
-        factory_method: createService
+        factory: ["@araneum.base.rabbitmq.producer.base_producer", createService]
         arguments:
             - "@old_sound_rabbit_mq.spot_customer_producer"
             - "%rabbitmq_queue_expiration%"
 
     araneum.base.rabbitmq.producer.spot_login:
         class: Araneum\Base\Service\RabbitMQ\ProducerService
-        factory_class: Araneum\Base\Service\ProducerFactory
-        factory_method: createService
+        factory: ["@araneum.base.rabbitmq.producer.base_producer", createService]
         arguments:
             - "@old_sound_rabbit_mq.spot_login_producer"
             - "%rabbitmq_queue_expiration%"
 
     araneum.base.rabbitmq.producer.application_customer:
         class: Araneum\Base\Service\RabbitMQ\ProducerService
-        factory_class: Araneum\Base\Service\ProducerFactory
-        factory_method: createService
+        factory: ["@araneum.base.rabbitmq.producer.base_producer", createService]
         arguments:
             - "@old_sound_rabbit_mq.application_customer_producer"
             - "%rabbitmq_queue_expiration%"
