--- a/web/admin/source/require/bower.json
+++ b/web/admin/source/require/bower.json
@@ -109,7 +109,7 @@
     "weather-icons": "2.0.10",
     "whirl": "1.0.0",
     "crud": "http://stash.office.dev/scm/af/crud.git",
-    "user": "http://stash.office.dev/scm/af/crud.git"
+    "user": "http://stash.office.dev/scm/af/user.git"
   },
   "resolutions": {
     "angular": "1.4.8",
